--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "axios": "^1.4.0",
         "react": "^18.2.0",
+        "react-cookie-consent": "^8.0.1",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.11.2"
     }
